--- a/config/database.yml
+++ b/config/database.yml
@@ -21,13 +21,13 @@ default: &default
 
 development:
   <<: *default
-  database: hello_tractor_development
+  database: hello_tractor_2_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: hello_tractor
+  #username: hello_tractor_2
 
   # The password associated with the PostgreSQL role (username).
   #password:
@@ -55,7 +55,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: hello_tractor_test
+  database: hello_tractor_2_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -79,6 +79,6 @@ test:
 #
 production:
   <<: *default
-  database: hello_tractor_production
-  username: hello_tractor
-  password: <%= ENV["HELLO_TRACTOR_DATABASE_PASSWORD"] %>
+  database: hello_tractor_2_production
+  username: hello_tractor_2
+  password: <%= ENV["HELLO_TRACTOR_2_DATABASE_PASSWORD"] %>
